ui: Fix menu overflow for smaller screens.

--- a/app/static/app/stylesheets/home.css
+++ b/app/static/app/stylesheets/home.css
@@ -308,6 +308,7 @@ Main components
     -moz-transition-duration: 0.5s;
     transition-duration: 0.5s;
     z-index: 3;
+    overflow: auto;
 }
 #main-nav ul {
     height: 100%;
